--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-<link type="text/css" rel="stylesheet" href="Trafalgar.css">
+<link type="text/css" rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/b0ca9a89bf.js" crossorigin="anonymous"></script>
 </head>
 <body>
